--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         body { text-align: center; font-family: Arial, sans-serif; }
         video { width: 90vw; max-width: 600px; border: 2px solid black; }
+        #ipDisplay { font-weight: bold; color: green; }
     </style>
 </head>
 <body>
@@ -17,22 +18,41 @@
         <option value="user">Front Camera</option>
     </select>
     <br><br>
-    <label for="ip">Enter PC IP:</label>
-    <input type="text" id="ip" placeholder="192.168.x.x">
+    <p>Your Device IP: <span id="ipDisplay">Detecting...</span></p>
     <label for="port">Port:</label>
     <input type="text" id="port" placeholder="8765" value="8765">
     <br><br>
     <button onclick="startStreaming()">Start Streaming</button>
     <br><br>
     <video id="video" autoplay playsinline></video>
+    
     <script>
+        async function getLocalIP() {
+            return new Promise((resolve) => {
+                const pc = new RTCPeerConnection({ iceServers: [] });
+                pc.createDataChannel("");
+                pc.createOffer().then(offer => pc.setLocalDescription(offer));
+
+                pc.onicecandidate = (event) => {
+                    if (event.candidate) {
+                        const ipMatch = event.candidate.candidate.match(/(\d+\.\d+\.\d+\.\d+)/);
+                        if (ipMatch) {
+                            resolve(ipMatch[1]);
+                            pc.close();
+                        }
+                    }
+                };
+            });
+        }
+
         async function startStreaming() {
             const video = document.getElementById("video");
             const cameraSelect = document.getElementById("cameraSelect").value;
-            const ip = document.getElementById("ip").value;
+            const ip = document.getElementById("ipDisplay").innerText;
             const port = document.getElementById("port").value;
+
             if (!ip || !port) {
-                alert("Please enter a valid IP and port.");
+                alert("IP detection failed or Port missing.");
                 return;
             }
             
@@ -57,6 +77,12 @@
                 console.error("Error accessing camera: ", error);
             }
         }
+
+        getLocalIP().then(ip => {
+            document.getElementById("ipDisplay").innerText = ip;
+        }).catch(() => {
+            document.getElementById("ipDisplay").innerText = "Failed to detect IP";
+        });
     </script>
 </body>
 </html>
